...
                ),
              ),
              child: SizedBox(
                height: 48,
                child: Center(
                  child: Text(
                    'Save Edits',
                    style: Theme.of(context).textTheme.labelLarge?.copyWith(
                          color: Theme.of(context).colorScheme.onPrimary,
                          fontWeight: FontWeight.bold,
                        ),
                  ),
                ),
...
